--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,3 +5,10 @@ site_url: https://ueapy.github.io/enveast_python_course
 repo_url: https://github.com/ueapy/enveast_python_course
 site_author: Denis Sergeev
 site_favicon: favicon.png
+docs_dir: src
+
+pages:
+  - Home: index.md
+  - Programme: programme.md
+  - Installation: installation.md
+  - Resources: resources.md
