subdirectory with .tex source for poster

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@
 ######################
 _site/
 
+#########
+# latex #
+#########
+*.synctex.gz
+*.out
+*.aux
+*.log
+
 ######################
 # OS generated files #
 ######################
