add info to the poster; minor changes in index.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: EnvEast Python Course
+site_name: Introduction to Python in Environmental Sciences
 theme: bootstrap
 
 site_url: https://ueapy.github.io/enveast_python_course
